tdf#158279 TOC links lost when converting .doc to HTML

regression from
    commit 8ce36e943f0e50970925b2dd77729ef6036b4a49
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Sun May 26 15:15:41 2019 +0200
    move some searching inside IDocumentMarkAccess

where I called the wrong method from inside Writer::FindPos_Bkmk

The code was then removed in
    commit 7bad1516c5f2a85b5bae3f49261ac2494cbb7162
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Wed Jul 17 05:41:08 2019 +0200
    loplugin:unusedmethods

Change-Id: I3f1e14a1e3ae2dd134738363e6b2679d2a2f418a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163095
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 0a32def8b519461b35b1e249d71ae9961b04400a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163029
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>